Changed padding-bottom to avoid heading-section's background image overlaping with the text

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav .menu {
 .text-block {
   margin: 0 0.9rem 0 1rem;
   min-height: calc(100vh - 9rem);
-  padding-bottom: 10rem;
+  padding-bottom: 55%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
